<resources>
    <string name="app_name">Friendly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    activity_login.xml-->
    <string name="loginUsernameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginLoginBtn">Log In</string>
    <string name="loginSignupBtn">Create Account</string>
    <!--    activity_preferences.xml-->
    <string name="preferencesNextBtn">Next</string>
    <!--    activity_signup.xml-->
    <string name="signupFirstnameHint">First Name</string>
    <string name="signupLastnameHint">Last Name</string>
    <string name="signupEmailHint">Email</string>
    <string name="signupUsernameHint">Username</string>
    <string name="signupPasswordHint">Password</string>
    <string name="signupConfirmPasswordHint">Confirm Password</string>
    <string name="template_user1">User 1</string>
    <string name="template_user2">User 2</string>
    <string name="template_place">Map</string>
    <string name="template_place_details">Click on markers for details</string>
    <string name="hangoutDate">Hangout date</string>

    <string name="match_btn_quick">Quick Match</string>
    <string name="match_btn_long">Schedule for Later</string>
    <string name="match_btn_upcoming">My Upcoming Hangouts</string>
    <string name="quick_match_title">Quick Match</string>
    <string name="match_title">Home</string>
    <string name="profile_title">Profile</string>
    <string name="preference_title">Preferences</string>
    <string name="username_title">"Username: @"</string>
    <string name="username_default">username shows here</string>
    <string name="name_title">"Name: "</string>
    <string name="name_default">Name shows here</string>
    <string name="hangout_history_btn">Hangout History</string>
    <string name="change_preferences_btn">Change Preferences</string>
    <string name="log_out_btn">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="receive_messages">Receive Messages</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
    <string name="match_quick_text">Quick Match</string>
    <string name="match_long_text">Schedule for Later</string>
    <string name="match_map_text">Show Map</string>
    <string name="match_upcoming_hangouts">Upcoming Hangouts</string>
    <string name="create_quick_match_title">Create Quick Match</string>
    <string name="create_quick_location">Place</string>
    <string name="create_quick_date">Date</string>
    <string name="create_quick_time">Time</string>
    <string name="btn_next">Next</string>
    <string name="btn_create_quick">Create Hangout</string>
    <string name="match_description">Hangouts within the next 48 hours</string>
    <string name="showClosestUser">We found the closest user from you! It\'s %s. \n You are .%2f miles from this user.</string>
    <string name="showClosestPlace">We found the closest place from you! It\'s %s. \n You are .%2f miles from this place.</string>
    <string name="create_quick_hangout_at_place">Create Quick Hangout @ %s</string>
    <string name="hangout_history_title">Hangout History</string>

    <string name="question0">What year are you in?</string>
    <string name="question1">Do you prefer to match with people similar or different to you?</string>
    <string name="question2">What are your hobbies?</string>
    <string name="question3">What are your preferences for hangout activities?</string>
    <string name="question4">When are you generally available?</string>
    <string name="join_quick_match_btn">Join Hangout</string>
    <string name="match_message_text">Message</string>
    <string name="long_match_title">Your Selected Match</string>
    <string name="long_match_matched_user_label">"Matched User: "</string>
    <string name="long_match_matched_user">matched user here</string>
    <string name="long_match_matched_place_label">"Place: "</string>
    <string name="long_match_matched_place">place here</string>
    <string name="long_match_matched_date_label">Recommended Times: </string>
    <string name="long_match_date1">date 1</string>
    <string name="long_match_date2">date 2</string>
    <string name="long_match_date3">date 3</string>
    <string name="long_match_coupon_default">Coupon Code</string>

    <string name="create_title">Create</string>
    <string name="map">Map</string>
    <string name="create_hangout">Create Hangout</string>
    <string name="login_null_error">Need to fill out username or password</string>
    <string name="login_success">Login Success</string>
    <string name="map_error_location">Can\'t access user\'s current location from database</string>
    <string name="map_error_save">Can\'t save user\'s current location</string>
    <string name="KEY_QUERY_PAST">past</string>
    <string name="KEY_QUERY_FUTURE">future</string>
    <string name="KEY_QUERY_QUICK">quick</string>
    <string name="sign_up_password_error">Passwords don\'t match</string>
    <string name="sign_up_success">Successful Sign Up!</string>
    <string name="create_hangout_error">Error creating hangout</string>
    <string name="create_hangout_success">Hangout Created!</string>
    <string name="login_error">Issue with login</string>

    <string name="label_monday">M</string>
    <string name="label_tuesday">Tu</string>
    <string name="label_wednesday">W</string>
    <string name="label_thursday">Th</string>
    <string name="label_friday">F</string>
    <string name="label_saturday">Sa</string>
    <string name="label_sunday">Su</string>

    <string name="change_availability_btn">Change Availability</string>
    <string name="availability_title">Availability Preference</string>
    <string name="availability_next_btn">Next</string>
    <string name="default_text">hi</string>
    <string name="default_number">12125551212</string>

    <string name="template_messaging_text">hi</string>
    <string name="template_messaging_number">12125551212</string>
    <string name="KEY_USER_NEXT_HANGOUT">nextUpcomingHangout</string>
    <string name="KEY_HANGOUT_DATE">date</string>
    <string name="dialog_at_symbol">" @ "</string>
    <string name="dialog_question">How was this hangout?</string>
    <string name="negative_feedback">Negative feedback</string>
    <string name="positive_feedback">Positive feedback</string>
    <string name="close_dialog">Close dialog</string>
    <string name="template_user">User</string>
    <string name="KEY_USER_FIRST_NAME">firstName</string>
    <string name="KEY_USER_LAST_NAME">lastName</string>
    <string name="KEY_HANGOUT_PLACE">\"place\"</string>
    <string name="KEY_HANGOUT_USER2">user2</string>
    <string name="KEY_PLACE_NAME">name</string>
    <string name="signupPhoneHint">Phone Number</string>
    <string name="phone_formatting_regex">\\D</string>
    <string name="dateTimeFormat">"EEEE M/dd, hh:mm a"</string>
    <string name="dateTimeFormatDetail">"EEEE M/dd/yyyy, hh:mm a"</string>
    <string name="dateFormat">"EEE M/dd/yy"</string>
    <string name="timeFormat">"hh:mm a"</string>
    <string name="btn_create_quick_hangout">Create Quick Hangout</string>
    <string name="match_hello_text">Hello,</string>
    <string name="match_user_name">"hi hi"</string>
    <string name="login_title">Log In</string>

</resources>