<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <TextView
        android:id="@+id/profile_title"
        style="@style/TitleFont.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/itemUserBanner"
        layout="@layout/item_user_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_title" />

    <TextView
        android:id="@+id/tvUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_title"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemUserBanner" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/username_default"
        app:layout_constraintLeft_toRightOf="@id/tvUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/itemUserBanner" />

    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabel" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_default"
        app:layout_constraintLeft_toRightOf="@+id/tvNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabel" />

    <Button
        android:id="@+id/btnHangoutHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="@string/hangout_history_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel" />

    <Button
        android:id="@+id/btnChangePreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_preferences_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHangoutHistory" />

    <Button
        android:id="@+id/btnChangeAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_availability_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePreferences" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding_medium"
        android:text="@string/log_out_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeAvailability" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receive_messages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>