<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/availabilityTitle"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnM"
        style="@style/CircularButton"
        android:text="@string/label_monday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btnTu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTu"
        style="@style/CircularButton"
        android:text="@string/label_tuesday"
        app:layout_constraintLeft_toRightOf="@id/btnM"
        app:layout_constraintRight_toLeftOf="@+id/btnW"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnW"
        style="@style/CircularButton"
        android:text="@string/label_wednesday"
        app:layout_constraintLeft_toRightOf="@id/btnTu"
        app:layout_constraintRight_toLeftOf="@+id/btnTh"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnTh"
        style="@style/CircularButton"
        android:text="@string/label_thursday"
        app:layout_constraintLeft_toRightOf="@id/btnW"
        app:layout_constraintRight_toLeftOf="@+id/btnF"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnF"
        style="@style/CircularButton"
        android:text="@string/label_friday"
        app:layout_constraintLeft_toRightOf="@id/btnTh"
        app:layout_constraintRight_toLeftOf="@+id/btnSa"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSa"
        style="@style/CircularButton"
        android:text="@string/label_saturday"
        app:layout_constraintLeft_toRightOf="@id/btnF"
        app:layout_constraintRight_toLeftOf="@+id/btnSu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSu"
        style="@style/CircularButton"
        android:text="@string/label_sunday"
        app:layout_constraintLeft_toRightOf="@id/btnSa"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>