<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragments.match.MatchFragment">
    <Button
        android:id="@+id/btnQuickHangout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_btn_quick" />

    <Button
        android:id="@+id/btnLongHangout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_btn_long" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/match_btn_upcoming" />

<!--    TODO: fix double padding-->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/matchHangoutHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>