<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/vHangoutDetail"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/action_bar_height"
    android:padding="@dimen/fragment_padding"
    android:transitionName="shared_element_container"
    tools:context=".fragments.HangoutDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvHangoutUser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_user1"/>
        <TextView
            android:id="@+id/tvMatchedUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_user2"/>
        <TextView
            android:id="@+id/tvHangoutDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hangoutDate"/>
    </LinearLayout>
</FrameLayout>