<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".fragments.match.QuickMatchFragment">

    <TextView
        android:id="@+id/tvCreateQuickMatch"
        style="@style/TitleFont.Big"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_quick_match_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlaces"
        android:layout_width="match_parent"
        android:layout_height="@dimen/quick_edittext_height"
        app:endIconMode="clear_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateQuickMatch">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompletePlaces"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/create_quick_location"
            android:padding="@dimen/edittext_padding" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="@dimen/quick_edittext_width"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPlaces">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/create_quick_date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTime"
        android:layout_width="@dimen/quick_edittext_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edittext_padding"
        app:layout_constraintLeft_toRightOf="@+id/tilDate"
        app:layout_constraintTop_toBottomOf="@id/tilPlaces">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/create_quick_time"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateHangoutAtPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_quick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDate" />

</androidx.constraintlayout.widget.ConstraintLayout>